--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,18 +1,41 @@
-.header{
+.header {
+    padding: 19px 24px;
+}
+
+.responsivePart {
+    display: none;
+}
+
+.bigPart {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 19px 24px;
 }
+
 .headerPart1 {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
+
 .headerPart1>div {
     margin-right: 32px;
 }
-.headerPart3{
+
+.headerPart3 {
     display: flex;
     flex-direction: row;
+}
+
+@media (max-width: 700px) {
+    .responsivePart {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .bigPart {
+        display: none;
+    }
 }
