--- a/src/components/section/section.module.css
+++ b/src/components/section/section.module.css
@@ -1,6 +1,8 @@
 .sectionPart {
     position: relative;
+    font-family: 'Gilroy';
     width: 100%;
+    height: 90vh;
     padding: 32px 44px;
     background: #F4F5F8;
     box-sizing: border-box;
@@ -88,12 +90,13 @@
     left: 0;
     width: 100%;
     height: 100%;
+    cursor: pointer;
 }
 
+.uploadDropPart:hover,
 .uploadDropPart.dragover,
-.uploadDropPart[draggable=true]{
+.uploadDropPart[draggable=true] {
     border: 2px dashed #C209C1;
-    background: rgba(250, 234, 250, 0.3);
 }
 
 .uploadPart {
@@ -136,15 +139,11 @@
     left: 0;
     width: 100%;
     height: 100%;
+    cursor: pointer;
 }
 
-.uplaodInputPart {
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+.uploadButton:hover {
+    background-color: #8f008a;
 }
 
 .dropAndDrive {
@@ -176,4 +175,47 @@
 .googleDriveButton span,
 .googleDriveButton img {
     width: 1.6vw !important;
+}
+
+@media (max-width: 700px) {
+    .sectionPart {
+        padding: 16px 24px;
+    }
+
+    .processPart {
+        padding: 24px 24px 16px;
+    }
+
+    .descriptionIconPart,
+    .descriptionPart {
+        padding: 0;
+    }
+
+    .descriptionHeaderPart {
+        font-size: 30px;
+        line-height: 36px;
+    }
+
+    .uploadDropPart {
+        margin-top: 24px;
+        padding: 22px;
+        display: flex;
+        align-items: center;
+    }
+
+    .uploadPart {
+        padding: 0;
+    }
+
+    .dropboxButton>div,
+    .googleDriveButton>div {
+        display: none;
+    }
+
+    .dropboxButton span,
+    .dropboxButton img,
+    .googleDriveButton span,
+    .googleDriveButton img {
+        width: 5vw !important;
+    }
 }
